[gd_scene load_steps=6 format=3 uid="uid://ba0cue6ojxyu8"]

[ext_resource type="Script" path="res://Scripts/ServerClientSelector.gd" id="1_e0jjg"]
[ext_resource type="Script" path="res://Scripts/ServerPanelController.gd" id="2_os6k0"]
[ext_resource type="PackedScene" uid="uid://dmm1atu8aj5wx" path="res://Prefabs/ClientServerPrefab.tscn" id="3_no7ip"]
[ext_resource type="PackedScene" uid="uid://hd7jkwfwvg6w" path="res://scenes/Gameplay.tscn" id="4_xbs5o"]
[ext_resource type="Script" path="res://Scripts/ClientPanelController.gd" id="6_88563"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClientServerSelectionPanel" type="Panel" parent="." node_paths=PackedStringArray("ClientServerSelectionPanel", "ClientPanel", "ServerPanel", "ServerAdress")]
custom_minimum_size = Vector2(250, 25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0jjg")
ClientServerPrefab = ExtResource("3_no7ip")
ClientServerSelectionPanel = NodePath(".")
ClientPanel = NodePath("../ClientPanel")
ServerPanel = NodePath("../ServerPanel")
ServerAdress = NodePath("ClientServerSelectionPanelContainer/LineEdit")

[node name="ClientServerSelectionPanelContainer" type="VBoxContainer" parent="ClientServerSelectionPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ClientServerSelectionPanel/ClientServerSelectionPanelContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "                     Is this a client or server device?                "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerButton" type="Button" parent="ClientServerSelectionPanel/ClientServerSelectionPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Server"

[node name="ClientButton" type="Button" parent="ClientServerSelectionPanel/ClientServerSelectionPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Client"

[node name="Label2" type="Label" parent="ClientServerSelectionPanel/ClientServerSelectionPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Server address (fill for client only):"

[node name="LineEdit" type="LineEdit" parent="ClientServerSelectionPanel/ClientServerSelectionPanelContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="ServerPanel" type="Panel" parent="." node_paths=PackedStringArray("ServerPanel", "PlayerCountLabel")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_os6k0")
GameplayScene = ExtResource("4_xbs5o")
ServerPanel = NodePath(".")
PlayerCountLabel = NodePath("ServerPanelVBoxContainer/PlayerCountLabel")

[node name="ServerPanelVBoxContainer" type="VBoxContainer" parent="ServerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="InfoLabel" type="Label" parent="ServerPanel/ServerPanelVBoxContainer"]
layout_mode = 2
text = "Waiting for players to join."
horizontal_alignment = 1

[node name="PlayerCountLabel" type="Label" parent="ServerPanel/ServerPanelVBoxContainer"]
layout_mode = 2
text = "Current players: 0"
horizontal_alignment = 1

[node name="StartGameButton" type="Button" parent="ServerPanel/ServerPanelVBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="ClientPanel" type="Panel" parent="." node_paths=PackedStringArray("DebugLabel", "Power0Button", "Power1Button", "Power2Button")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_88563")
DebugLabel = NodePath("VBoxContainer/DebugLabel")
Power0Button = NodePath("VBoxContainer/Power0Button")
Power1Button = NodePath("VBoxContainer/Power1Button")
Power2Button = NodePath("VBoxContainer/Power2Button")

[node name="VBoxContainer" type="VBoxContainer" parent="ClientPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Power0Button" type="Button" parent="ClientPanel/VBoxContainer"]
layout_mode = 2
text = "Power 0"

[node name="Power1Button" type="Button" parent="ClientPanel/VBoxContainer"]
layout_mode = 2
text = "Power 1"

[node name="Power2Button" type="Button" parent="ClientPanel/VBoxContainer"]
layout_mode = 2
text = "Power 2"

[node name="DebugLabel" type="Label" parent="ClientPanel/VBoxContainer"]
layout_mode = 2
text = "Debug log:
"

[connection signal="button_up" from="ClientServerSelectionPanel/ClientServerSelectionPanelContainer/ServerButton" to="ClientServerSelectionPanel" method="ServerButtonClicked"]
[connection signal="button_up" from="ClientServerSelectionPanel/ClientServerSelectionPanelContainer/ClientButton" to="ClientServerSelectionPanel" method="ClientButtonClicked"]
[connection signal="button_up" from="ServerPanel/ServerPanelVBoxContainer/StartGameButton" to="ServerPanel" method="StartGameClicked"]
[connection signal="button_up" from="ClientPanel/VBoxContainer/Power0Button" to="ClientPanel" method="UsePower" binds= [0]]
[connection signal="button_up" from="ClientPanel/VBoxContainer/Power1Button" to="ClientPanel" method="UsePower" binds= [1]]
[connection signal="button_up" from="ClientPanel/VBoxContainer/Power2Button" to="ClientPanel" method="UsePower" binds= [2]]
